# manipulation_project

./: .gitmodules  README.md  howtorun.txt  rviz2_config_realrobot.rviz
get_cube_pose/: CMakeLists.txt
get_cube_pose/launch/: get_pose_client.launch.py  get_pose_client_realrobot.launch.py
moveit2_scripts/: CMakeLists.txt
moveit2_scripts/launch/: cartesian_to_preapproach.launch.py  pick_and_place.launch.py  pick_and_place_perception.launch.py  pick_and_place_perception_real.launch.py  pick_and_place_realrobot.launch.py
moveit2_scripts/src/: cartesian_to_preapproach.cpp  pick_and_place.cpp  pick_and_place_perception.cpp  pick_and_place_perception_real.cpp  pick_and_place_realrobot.cpp  test_gripper.cpp  test_trajectory.cpp
my_moveit_config/: .setup_assistant  package.xml
my_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  name.srdf
real_moveit_config/: package.xml
real_moveit_config/config/: moveit_controllers.yaml  name.srdf
real_moveit_config/launch/: move_group.launch.py
